--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,14 @@
 development:
 adapter: postgresql
 encoding: unicode
-database: meric
+database: botae-dev
 pool: 5
 timeout: 5000
-
 test:
 adapter: postgresql
-database: postgres
+database: botae-test
 pool: 5
 timeout: 5000
-
 production:
 adapter: postgresql
 database: ENV['DATABASE_URL']
